# OpenEnv

./: Dockerfile  Openenv.yaml  README.md  baseline_inference.py  main.py  pyproject.toml  requirements.txt
env/: models.py  pyproject.toml
server/: app.py  environment.py
tests/: test_environment.py
