[project]
name = "mail-pro-env"
version = "1.0.0"
description = "OpenEnv Mail Classification & Routing Environment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "pyyaml>=6.0,<7",
    "openai>=1.30,<2",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "models.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"